--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -95,6 +95,7 @@ input, select {
 
 button {
   border: 0;
+  margin: 0;
   background: transparent;
   cursor: pointer;
   user-select: none;
